# lohnsteuer-bmf

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: einkommensteuer_tarif.py  lohnsteuer_quickstart.py
src/lohnsteuer_bmf/: __init__.py  _data.py  einkommensteuer.py  konstanten.py  lohnsteuer.py  tarif.py
tests/: test_einkommensteuer.py  test_lohnsteuer.py  test_tarif.py  test_upstream_parity.py
tests/golden/: einkommensteuer.json  lohnsteuer.json
tools/: sync_from_upstream.py
