[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lohnsteuer-bmf"
dynamic = ["version"]
description = "Lohnsteuer & Einkommensteuer nach BMF-Programmablaufplan 2026 — offline, typisiert, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "L1nch-lab" }]
keywords = [
    "lohnsteuer",
    "einkommensteuer",
    "bmf",
    "pap",
    "programmablaufplan",
    "steuer",
    "tax",
    "germany",
    "2026",
    "est",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff==0.15.16",
    "mypy>=2.1.0",
    "build>=1.2.2",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/L1nch-lab/lohnsteuer-bmf"
Repository = "https://github.com/L1nch-lab/lohnsteuer-bmf"
"Hosted API" = "https://rechner-hub.de/steuerrechner-api/"
Changelog = "https://github.com/L1nch-lab/lohnsteuer-bmf/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/lohnsteuer_bmf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lohnsteuer_bmf"]

[tool.hatch.build.targets.sdist]
include = ["src/lohnsteuer_bmf", "tests", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"tools/**" = ["S101", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["lohnsteuer_bmf"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/lohnsteuer_bmf"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
